nucleo-picker-vt/tests/scenarios/snapshots/scenarios__default__prompt_scroll_at_column_zero@after-left.snap
---
source: nucleo-picker-vt/tests/scenarios/default.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: after-left
  name_expression: "\"after-left\""
  sequence: 2
---
version: 1
size:
  cols: 3
  rows: 3
screen: alternate
cursor:
  position:
    x: 2
    y: 2
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ▌ …
  - "   "
  - "> c"
styles:
  - row: 0
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 0
    start: 1
    end: 3
    background: "#666666"
    bold: true
