nucleo-picker-vt/tests/scenarios/snapshots/scenarios__default__toggle_status_reversed@restored.snap
---
source: nucleo-picker-vt/tests/scenarios/default.rs
assertion_line: 80
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: restored
  name_expression: "\"restored\""
  sequence: 5
---
version: 1
size:
  cols: 30
  rows: 5
screen: alternate
cursor:
  position:
    x: 2
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ">                             "
  - "  24/24 ──────────────────────"
  - "▌ item-00 alpha               "
  - "  item-01 bravo               "
  - "  item-02 charlie             "
styles:
  - row: 1
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 7
    end: 30
    foreground: "#c5c8c6"
    italic: true
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 15
    background: "#666666"
    bold: true
